# tinyfs

./: .gitignore  CMakeLists.txt  main.c  tinyfs.c  tinyfs.h
src/: define.h  directory.cpp  directory.h  error.cpp  error.h  iDiskIO.h  main.cpp  maybe.h  tinyfs.cpp  tinyfs.h
src/tests/: directoryTests.cpp  diskMock.cpp  diskMock.h  errorTests.cpp  expectedBuffers.h  mainTests.cpp  maybeTests.cpp  tinyfsTests.cpp
